platform-events/main/default/objects/AsynchronousProcess__e/AsynchronousProcess__e.object-meta.xml
<CustomObject>
    <label>Asynchronous Process</label>
    <pluralLabel>Asynchronous Processes</pluralLabel>
</CustomObject>