platform-events/main/default/objects/AsynchronousProcess__e/fields/OperationInformation__c.field-meta.xml
<CustomField>
    <fullName>OperationInformation__c</fullName>
    <description>Set the operation status. Determines the toast notification variant: Valid values are: info (default), success, warning, and error.</description>
    <label>Operation Information</label>
    <length>8</length>
    <type>Text</type>
</CustomField>