platform-events/main/default/objects/AsynchronousProcess__e/fields/RecordName__c.field-meta.xml
<CustomField>
    <fullName>RecordName__c</fullName>
    <label>Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>