platform-events/main/default/objects/AsynchronousProcess__e/fields/UserToNotify__c.field-meta.xml
<CustomField>
    <fullName>UserToNotify__c</fullName>
    <label>User to Notify</label>
    <length>18</length>
    <type>Text</type>
</CustomField>